Streching figure, making it easier to read(???)

--- a/LaTeX report/content/task_10_2.tex
+++ b/LaTeX report/content/task_10_2.tex
@@ -419,7 +419,7 @@ Nevertheless it is possible to verify the control sequence by compensating for t
 \subsubsection{Simulink}
 \begin{figure}[h]
 	\centering
-	\includegraphics[angle=90, height=180mm]{code/lab2_simulink}
+	\includegraphics[angle=90, width=0.5\textwidth,height=0.7\textheight]{code/lab2_simulink}
 	\caption{Simulink diagram used in lab 2.}
 	\label{fig:lab2_simulink}
 \end{figure}
