Add ch. 3.1 and 3.2

--- a/LaTeX report/content/task_10_2.tex
+++ b/LaTeX report/content/task_10_2.tex
@@ -89,7 +89,7 @@ The eigenvalues of the continous model, with $K_{pp} = 0,1 , K_{pd} = 0,4$ are:
 \end{equation}
 
 % ------------------- DISCRETIZING THE MODEL ------------------------
-\subsection{Discretizing the continous time model}
+\subsection{Discretizing the continous time model} \label{sec:lab2_disc}
 A discretized model is required for generating an optimal trajectory. \textit{[...] continous time models require quite different solution methods} \cite{FossHeirung}
 
 We will discretize the model using the forward Euler method, which is given by:
