--- a/LaTeX report/content/task_10_4.tex
+++ b/LaTeX report/content/task_10_4.tex
@@ -2,56 +2,85 @@
 
 \begin{document}
 \section{10.4 - Optimal Control of Pitch/Travel and Elevation with Feedback}
-We have to add the equation for elevation 
-$$ \ddot{e} + K_3K_{ed}\dot{e} + K_3K_{ep}e = K_3K_{ep}e_c $$
-to the system defined in \cref{eq:lab2_cont_ss}
+In the previous labs the elevation has been disregarded, and assumed to be zero. In this lab, elevation is not disregarded, and the group had to calculate an optimal trajectory for the elevation as well. 
+
+\subsection{The continuous model}
+\textit{Answer 10.4.1.1}
+The equation for elevation has been given in the problem description as
+\begin{equation}\label{eq:lab4_elevation}
+	\ddot{e} + K_3K_{ed}\dot{e} + K_3K_{ep}e = K_3K_{ep}e_c
+\end{equation}
+where $ e_c $ is the elevation setpoint.
+
+Expanding the system defined in \cref{eq:lab2_cont_ss} to include \cref{eq:lab4_elevation}, gives a new system that includes the elevation:
 
 \begin{equation}\label{eq:lab4_cont_ss}
 	\underbrace{\begin{bmatrix}
-		\dot \lambda \\
-		\dot r \\
-		\dot p \\
-		\ddot p \\
-        \dot e \\
-        \ddot e \\
+			\dot \lambda \\
+			\dot r \\
+			\dot p \\
+			\ddot p \\
+			\dot e \\
+			\ddot e \\
 	\end{bmatrix}}_{\bm{\dot x}} = 
 	\underbrace{
-	\begin{bmatrix}
-		0 & 1 & 0 & 0 & 0 & 0\\
-		0 & 0 & -K_2 & 0 & 0 & 0\\
-		0 & 0 & 0 & 1 & 0 & 0\\
-		0 & 0 & -K_1 K_{pp} &  -K_1 K_{pd} & 0 & 0\\
-        0 & 0 & 0 & 0 & 0 & 1 \\
-        0 & 0 & 0 & 0 & -K_3K_{ep} & -K_3K_{ed} \\
-	\end{bmatrix}
+		\begin{bmatrix}
+			0 & 1 & 0 & 0 & 0 & 0\\
+			0 & 0 & -K_2 & 0 & 0 & 0\\
+			0 & 0 & 0 & 1 & 0 & 0\\
+			0 & 0 & -K_1 K_{pp} &  -K_1 K_{pd} & 0 & 0\\
+			0 & 0 & 0 & 0 & 0 & 1 \\
+			0 & 0 & 0 & 0 & -K_3K_{ep} & -K_3K_{ed} \\
+		\end{bmatrix}
 	}_{\bm A_c}
-	\begin{bmatrix}
-		\lambda \\ r \\ p \\ \dot{p} \\ e \\ \dot{e}
-	\end{bmatrix}
+	\underbrace{
+		\begin{bmatrix}
+			\lambda \\ r \\ p \\ \dot{p} \\ e \\ \dot{e}
+		\end{bmatrix}
+	}_{\bm x}
 	+
 	\underbrace{
 		\begin{bmatrix}
 			0 & 0 \\
-            0 & 0\\
-            0 & 0\\
-            K_1 K_{pp} & 0\\
-            0 & 0 \\
-            0 & K_3K_{ep} \\
+			0 & 0\\
+			0 & 0\\
+			K_1 K_{pp} & 0\\
+			0 & 0 \\
+			0 & K_3K_{ep} \\
 		\end{bmatrix}
 	}_{\bm B_c} 
-    \underbrace{
-        \begin{bmatrix}
-            p_c \\
-            e_c \\
-        \end{bmatrix}
-    }_{u}
+	\underbrace{
+		\begin{bmatrix}
+			p_c \\
+			e_c \\
+		\end{bmatrix}
+	}_{\bm u}
 \end{equation}
-
-\subsection{The continuous model}
-\textit{Answer 10.4.1.1}
 
 \subsection{The discretized model}
 \textit{Answer 10.4.1.2}
+Discretizing the continuous system defined in \cref{eq:lab4_cont_ss} was done using the forward Euler method (see \cref{sec:lab2_disc} for more information about this method).
+
+The resulting dicretized system became: 
+\begin{equation}\label{eq:lab4_disc_ss}
+	\bm A_d = \begin{bmatrix}
+		1 & T & 0 & 0 & 0 & 0\\
+		0 & 1 & -TK_2 & 0 & 0 & 0\\
+		0 & 0 & 1 & T & 0 & 0\\
+		0 & 0 & -T K_1 K_{pp} &  1 - T K_1 K_{pd} & 0 & 0\\
+		0 & 0 & 0 & 0 & 1 & T \\
+		0 & 0 & 0 & 0 & -T K_3 K_{ep} & 1 - TK_3K_{ed} \\
+	\end{bmatrix}, \quad
+	\bm B_d = \begin{bmatrix}
+		0 & 0 \\
+		0 & 0\\
+		0 & 0\\
+		T K_1 K_{pp} & 0\\
+		0 & 0 \\
+		0 & T K_3K_{ep} \\
+	\end{bmatrix}
+\end{equation}
+where $ T $ is the sample-time.
 
 \subsection{Experimental results}
 \textit{Printouts of data from relevant experiments (plots).
