--- a/LaTeX report/content/task_10_3.tex
+++ b/LaTeX report/content/task_10_3.tex
@@ -19,7 +19,7 @@ In this exercise the gain matrix $K$ is calculated as an LQ controller, see \cre
 
 Model Predictive Control (MPC) is a completely different solution: the optimal trajectory is recalculated at every timestep. See \cref{kap:10_3_mpc} for more info about how that could be implemented here.
 
-\subsection{LQ controller}\label{kap:task_10_3_LQ_controller}
+\subsection{LQ controller} \label{kap:task_10_3_LQ_controller}
 As explained in the problem description\todo{cref}, an LQ (or linear-quadratic) controller, solves the quadratic objective function given by
 \begin{equation}
     J = \sum^\infty_{i=0} \Delta x_{i+1}^\top Q \Delta x_{i+1} + \Delta u_i^\top R \Delta u_i, \quad Q \ge0, \quad R > 0
@@ -43,7 +43,7 @@ This is a drastically different approach to the LQ-method impemented in this lab
 \subsubsection{Modified Control Hierarchy with MPC}
 Rather than introducing the Advanced Control Layer with the LQ-controller; introducing MPC would introduce the feedback to the Optimization Layer instead. The optimization layer would use the current state value and generate an optimal trajectory to the target, outputting pitch-setpoints to the Basic control layer at every timestep.
 
-\subsection{Experimental results}
+\subsection{Experimental results} \label{sec:lab3_result}
 It is very clear that introducing feedback produced results much better than the ones achieved without feedback, almost regardless of the tuning of the LQR regulator. This is of course what was expected.
 
 The group performed experiments with different values of Q and R to analyze the performance of the helicopter with different tunings.
