Add LAB4 best tuning plot

--- a/LaTeX report/content/task_10_4.tex
+++ b/LaTeX report/content/task_10_4.tex
@@ -136,8 +136,13 @@ Using the same approach as in \todo{cref lab 3 }the group tuned entry-by-entry i
 	\end{bmatrix}
 \end{equation}
 
-This gave the results in \todo{fig best tuning}
-\missingfigure{Best tuning}
+This gave the results in \cref{fig:LAB4_best_tuning}
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=\linewidth]{figures/LAB4_best_tunings.png}
+	\caption{Best tuning}
+	\label{fig:LAB4_best_tuning}
+\end{figure}
 
 \subsubsection{Finding a reasonable trajectory}
 With a good
