Add LAB3 plots for all tuning variables
One per variable, travel, travelrate, pitch, pitchrate

--- a/LaTeX report/content/task_10_3.tex
+++ b/LaTeX report/content/task_10_3.tex
@@ -65,8 +65,28 @@ The group observed that the state never reached the optimal trajectory, even wit
 \begin{figure}[h]
 	\includegraphics[width=\linewidth]{figures/LAB3_Q_variations.png}
 	\caption{Results of varying Q-values while keeping $R=1$}
-	\label{fig:LAB3_Q_variations}
+	\label{fig:LAB3_Q_variations_travel}
 \end{figure}
+
+\begin{figure}[h]
+	\includegraphics[width=\linewidth]{figures/LAB3_Q_variations_travelrate.png}
+	\caption{Results of varying Q-values while keeping $R=1$}
+	\label{fig:LAB3_Q_variations_travelrate}
+\end{figure}
+
+\begin{figure}[h]
+	\includegraphics[width=\linewidth]{figures/LAB3_Q_variations_pitch.png}
+	\caption{Results of varying Q-values while keeping $R=1$}
+	\label{fig:LAB3_Q_variations_pitch}
+\end{figure}
+
+\begin{figure}[h]
+	\includegraphics[width=\linewidth]{figures/LAB3_Q_variations_pitchrate.png}
+	\caption{Results of varying Q-values while keeping $R=1$}
+	\label{fig:LAB3_Q_variations_pitchrate}
+\end{figure}
+
+
 \clearpage
 
 \subsection{MATLAB and Simulink}
